fix product card UI on tablet screens

--- a/frontend/src/scss/components/_productCard.scss
+++ b/frontend/src/scss/components/_productCard.scss
@@ -82,11 +82,43 @@
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
+  .product-holder {
+    flex-wrap: wrap;
+    .product-card {
+      width: 180px;
+      height: 330px;
+      box-shadow: none;
+      .discount {
+        top: -15px;
+        img {
+          width: 60px;
+        }
+      }
+      .product-img {
+        width: 180px;
+        height: 220px;
+        object-fit: cover;
+        cursor: pointer;
+      }
+      .product-info{
+        width: 180px;
+        .product-title{
+          height: 35px;
+          font-size: 0.8rem;
+        }
+      }
+      button {
+        img {
+          width: 25px;
+        }
+      }
+    }
+  }
 }
 
 
-@media (max-width: 480px) {
+@media (max-width: 600px) {
   .product-holder {
     flex-wrap: wrap;
     gap: 3em;
